[package]
name = "mhinparser"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
hex = "0.4.3"
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.98"
futures = "0.3.31"
bitcoin = "0.32.5"
clap = "4.5.38"
ctrlc = "3.4.7"
rusqlite = "0.31.0"
lmdb = "0.8.0"
glob = "0.3.1"
regex = "1.10.3"
rocksdb = "0.23.0"
actix-web = "4.11.0"
actix-cors = "0.7.1"
thiserror = "2.0.12"
tera = "1.20.0"
actix-files = "0.6.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1