[package]
name = "nicesigner"
version = "0.1.0"
edition = "2021"


[lib]
name = "nicesigner"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py37"] }
sha256 = "1.5.0"
bitcoin = "0.32.4"
hex = "0.4"
secp256k1 = { version = "0.29.0", features = ["rand", "rand-std"] }
hdwallet = "0.3"
rand = "0.8"
dirs = "5.0"
bip39 = "2.0"
zerocopy = "0.7"
rayon = "1.8"
parking_lot = "0.12"
ctrlc = "3.2"
